--- a/app/index.css
+++ b/app/index.css
@@ -15,6 +15,12 @@
     /* border-bottom: 1px grey solid; */
     width: 100%;
     box-sizing: border-box;
+    position: absolute;
+}
+
+.dragger {
+    position: absolute;
+    right: 0;
 }
 
 .slot {
