--- a/app/index.css
+++ b/app/index.css
@@ -4,6 +4,7 @@
     padding-top: 20px;
     padding-left: 40px;
     padding-right: 40px;
+    margin: 0 auto;
 }
 
 .slot-and-block {
@@ -21,6 +22,7 @@
 .dragger {
     position: absolute;
     right: 0;
+    z-index: 1;
 }
 
 .slot {
