--- a/app/index.css
+++ b/app/index.css
@@ -4,6 +4,7 @@
     padding-top: 20px;
     padding-left: 40px;
     padding-right: 40px;
+    padding-bottom: 20px;
     margin: 0 auto;
     font-family: 'Times New Roman', Times, serif;
 }
@@ -32,9 +33,28 @@
     z-index: 1;
 }
 
-/* .modal-header {
+.modal-background form {
+    height: 400px; 
+    width: 600px; 
+    background-color: white; 
+    display: flex; 
+    flex-direction: column;
+}
 
-} */
+.modal-background .modal-header {
+    font-size: 28px;
+    height: 60px; 
+    background-color: #fafafa; 
+    display: flex; 
+    align-items: center;
+    justify-content: center;
+}
+
+.modal-background .modal-body {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
 
 .form-field {
     display: flex;
